--- a/client/src/ui/GameRoom/sidePanel/sidePanel.scss
+++ b/client/src/ui/GameRoom/sidePanel/sidePanel.scss
@@ -15,7 +15,6 @@ $text-color: #D4D3D3;
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 	// background-color: #989695;
-	z-index: 100;
 	position: absolute;
 	height: 100%;
 	width: 100%;
@@ -37,7 +36,7 @@ $text-color: #D4D3D3;
 		// transform: translateX(25vw);
 	}
 	.bg-overlay  {
-		z-index: 97;
+		z-index: 0;
 		background-color: rgba(0,0,0,.5);
 		// background-color: rgba(17, 24, 39, 1);
 		position: absolute;
@@ -51,7 +50,7 @@ $text-color: #D4D3D3;
 	}
 	.panel-wrapper {
 		// background-color: #989695;
-		z-index: 98;
+
 		pointer-events: none;
 		position: absolute;
 		width: 70%;
@@ -65,8 +64,8 @@ $text-color: #D4D3D3;
 			pointer-events: none;
 			justify-content: flex-start;
 			display: flex;
-			
-			.tab{
+			z-index: 4;	
+			.tab {
 				// @apply  mt-1 bg-white inline-block py-2 px-4 font-semibold text-blue-600 hover:text-blue-800 uppercase;
 				cursor: pointer;
 				pointer-events: auto;
@@ -76,8 +75,8 @@ $text-color: #D4D3D3;
 				margin-top: 0.25rem/* 4px */;
 				padding-top: 0.5rem/* 8px */;
 				padding-bottom: 0.5rem/* 8px */;
-				padding-left: .5rem;
-				padding-right: .5rem;
+				padding-left: .4rem;
+				padding-right: .4rem;
 				// font-weight: 600;
 				color: $text-color;
 				// ------
@@ -111,6 +110,7 @@ $text-color: #D4D3D3;
 			min-height: 0;
 			flex: 1 0 0;
 			.panel-section{
+				z-index: 4;
 				overflow: hidden;
 				display: none;
 				&.visible {
@@ -118,7 +118,7 @@ $text-color: #D4D3D3;
 				}
 			}
 			.panel-toggle {
-				z-index: 98;
+				z-index: 2;
 				position: absolute;
 				transform: translate(-100%, 0%);
 				// left: -100%;
